Updated and cleaned code.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				</div>
 			</div>
 		</div>
-		<button id="b1" class="button" onclick="randomize()">Create!</button>
-	</div>
+		<button id="b1" class="button1" onclick="randomize()">Create!</button>
+	</div>		
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 
